--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,7 @@
   "pages": [
     "pages/work1/index",
     "pages/work2/index",
-    "pages/work3/index" 
+    "pages/work3/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -11,5 +11,6 @@
     "navigationBarTitleText": "云开发 QuickStart",
     "navigationBarTextStyle": "black"
   },
-  "style": "v2"
+  "style": "v2",
+  "sitemapLocation": "sitemap.json"
 }
