--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/work1/index",
     "pages/work2/index",
-    "pages/work3/index"
+    "pages/work3/index",
+    "pages/work4/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
