--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/work1/index",
     "pages/work2/index",
     "pages/work3/index",
-    "pages/work4/index"
+    "pages/work4/index",
+    "pages/test/test"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
