--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,6 +4,7 @@
     "pages/work2/index",
     "pages/work3/index",
     "pages/work4/index",
+    "pages/work4 copy/index",
     "pages/test/test"
   ],
   "window": {
