--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,7 +5,8 @@
     "pages/work3/index",
     "pages/work4/index",
     "pages/work4 copy/index",
-    "pages/test/test"
+    "pages/test/test",
+    "pages/work5/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
