--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,12 @@
         "pages/test/test",
         "pages/work5/index",
         "pages/work6/property",
-        "pages/work6/divorce"
+        "pages/work6/divorce",
+        "pages/work8/Index/index",
+        "pages/work8/case/case",
+        "pages/work8/map/map",
+        "pages/work8/person/person",
+        "pages/work8/app"
     ],
     "window": {
         "backgroundColor": "#F6F6F6",
@@ -33,5 +38,6 @@
                 "selectedIconPath": "/pages/work6/images/n1.png"
             }
         ]
-    }
+    },
+    "sitemapLocation": "sitemap.json"
 }
