--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,43 +1,43 @@
 {
-    "pages": [
-        "pages/work1/index",
-        "pages/work2/index",
-        "pages/work3/index",
-        "pages/work4/index",
-        "pages/work4 copy/index",
-        "pages/test/test",
-        "pages/work5/index",
-        "pages/work6/property",
-        "pages/work6/divorce",
-        "pages/work8/Index/index",
-        "pages/work8/case/case",
-        "pages/work8/map/map",
-        "pages/work8/person/person",
-        "pages/work8/app"
-    ],
-    "window": {
-        "backgroundColor": "#F6F6F6",
-        "backgroundTextStyle": "light",
-        "navigationBarBackgroundColor": "#F6F6F6",
-        "navigationBarTitleText": "云开发 QuickStart",
-        "navigationBarTextStyle": "black"
-    },
-    "style": "v2",
-    "tabBar": {
-        "list": [
-            {
-                "pagePath": "pages/work6/property",
-                "text": "财产",
-                "iconPath": "/pages/work6/images/m2.png",
-                "selectedIconPath": "/pages/work6/images/m1.png"
-            },
-            {
-                "pagePath": "pages/work6/divorce",
-                "text": "离婚",
-                "iconPath": "/pages/work6/images/n2.png",
-                "selectedIconPath": "/pages/work6/images/n1.png"
-            }
-        ]
-    },
-    "sitemapLocation": "sitemap.json"
+  "pages": [
+    "pages/work1/index",
+    "pages/work2/index",
+    "pages/work3/index",
+    "pages/work4/index",
+    "pages/work4 copy/index",
+    "pages/test/test",
+    "pages/work5/index",
+    "pages/work6/property",
+    "pages/work6/divorce",
+    "pages/work8/Index/index",
+    "pages/work8/case/case",
+    "pages/work8/map/map",
+    "pages/work8/person/person",
+    "pages/work8/template/template"
+  ],
+  "window": {
+    "backgroundColor": "#F6F6F6",
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#F6F6F6",
+    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTextStyle": "black"
+  },
+  "style": "v2",
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/work6/property",
+        "text": "财产",
+        "iconPath": "/pages/work6/images/m2.png",
+        "selectedIconPath": "/pages/work6/images/m1.png"
+      },
+      {
+        "pagePath": "pages/work6/divorce",
+        "text": "离婚",
+        "iconPath": "/pages/work6/images/n2.png",
+        "selectedIconPath": "/pages/work6/images/n1.png"
+      }
+    ]
+  },
+  "sitemapLocation": "sitemap.json"
 }
