--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -42,5 +42,10 @@
             }
         ]
     },
+    "permission": {
+        "scope.userLocation": {
+            "desc": "你的位置信息将用于小程序接口的效果显示"
+        }
+    },
     "sitemapLocation": "sitemap.json"
 }
