--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -16,7 +16,8 @@
         "pages/work8/template/template",
         "pages/work8/leader/leader",
         "pages/work8/scenery/scenery",
-        "pages/work7/index"
+        "pages/work7/index",
+        "pages/work9/index"
     ],
     "window": {
         "backgroundColor": "#F6F6F6",
