--- a/project.private.config.json
+++ b/project.private.config.json
@@ -55,6 +55,12 @@
                     "pathName": "pages/work11/index",
                     "query": "",
                     "scene": null
+                },
+                {
+                    "name": "pages/work10/index",
+                    "pathName": "pages/work10/index",
+                    "query": "",
+                    "scene": null
                 }
             ]
         }
