--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -18,7 +18,8 @@
         "pages/work8/scenery/scenery",
         "pages/work7/index",
         "pages/work9/index",
-        "pages/work11/index"
+        "pages/work11/index",
+        "pages/work10/index"
     ],
     "window": {
         "backgroundColor": "#F6F6F6",
