--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -20,7 +20,8 @@
     "pages/work9/index",
     "pages/work11/index",
     "pages/work10/index",
-    "pages/work12/index"
+    "pages/work12/index",
+    "pages/work13/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
