--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -27,7 +27,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
+    "navigationBarTitleText": "很普通的普通小程序",
     "navigationBarTextStyle": "black"
   },
   "style": "v2",
