--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -21,7 +21,9 @@
     "pages/work11/index",
     "pages/work10/index",
     "pages/work12/index",
-    "pages/work13/index"
+    "pages/work13/index",
+    "pages/work14/index",
+    "pages/work14/detail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
